Fix for the sticky property on Safari 14.1

--- a/src/scss/04-patterns/04-navigation/_section-index.scss
+++ b/src/scss/04-patterns/04-navigation/_section-index.scss
@@ -87,6 +87,13 @@
 	}
 }
 
+// Fixes the sticky problem on Safari 14.1
+.safari {
+	[data-block*='SectionIndex'] {
+		display: contents;
+	}
+}
+
 // Accessibility ---------------------------------------------------------------------------
 ///
 .has-accessible-features {
